--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "firestore"
+        "firestore",
+        "FSRS",
+        "mindmap",
+        "mindmaps"
     ]
 }
