--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.8",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.11.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "openai": "^4.95.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^3.2.0"
