--- a/package.json
+++ b/package.json
@@ -43,11 +43,17 @@
     "css-loader": "^7.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "glob": "^10.3.10",
+    "jose": "^5.2.2",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
+  },
+  "resolutions": {
+    "glob": "^10.3.10",
+    "jose": "^5.2.2"
   }
 }
