--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -34,23 +34,17 @@
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "css-loader": "^7.1.2",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "glob": "^10.3.10",
-    "jose": "^5.2.2",
     "postcss": "^8.5.3",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.3",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "resolutions": {
     "glob": "^10.3.10",
