--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
       "use": "@vercel/next"
     }
   ],
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
   "env": {
     "NEXT_PUBLIC_FIREBASE_API_KEY": "@next_public_firebase_api_key",
     "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@next_public_firebase_auth_domain",
