--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.5",
     "typescript": "^5.8.3"
   },
   "engines": {
@@ -48,6 +48,9 @@
   },
   "resolutions": {
     "glob": "^10.3.10",
+    "inflight": "^2.0.0",
+    "google-p12-pem": "^5.0.0",
+    "node-domexception": "^2.0.0",
     "jose": "^5.2.2"
   }
 }
