--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/next"
     }
   ],
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install && npm run build",
   "installCommand": "npm install",
   "framework": "nextjs",
   "env": {
