--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "14.1.0",
     "next-auth": "^4.24.11",
     "openai": "^4.95.1",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.5",
-    "typescript": "^5.8.3"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
