--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@next-auth/firebase-adapter": "^2.0.1",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.8",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "firebase-admin": "^11.11.1",
     "framer-motion": "^11.18.2",
@@ -32,6 +39,7 @@
     "openai": "^4.95.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "sonner": "^2.0.3",
