--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,3 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build-vercel",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "env": {
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "@next_public_firebase_api_key",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@next_public_firebase_auth_domain",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@next_public_firebase_project_id",
-    "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@next_public_firebase_storage_bucket",
-    "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@next_public_firebase_messaging_sender_id",
-    "NEXT_PUBLIC_FIREBASE_APP_ID": "@next_public_firebase_app_id",
-    "FIREBASE_PROJECT_ID": "@firebase_project_id",
-    "FIREBASE_CLIENT_EMAIL": "@firebase_client_email",
-    "FIREBASE_PRIVATE_KEY": "@firebase_private_key",
-    "NEXT_DISABLE_PRERENDER": "true",
-    "NEXT_PUBLIC_BUILD_ENV": "vercel"
-  },
-  "build": {
-    "env": {
-      "NEXT_DISABLE_PRERENDER": "true",
-      "NEXT_SKIP_INITIAL_SETUP": "1",
-      "NEXT_PUBLIC_BUILD_ENV": "vercel"
-    }
-  },
-  "git": {
-    "deploymentEnabled": {
-      "main": true
-    }
-  }
+  "buildCommand": "npm run build-vercel"
 } 
