Enhance UI with themed components and fix client/server issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,22 @@
 {
     "cSpell.words": [
+        "Chakra",
         "chartjs",
+        "Chunin",
         "firebaseapp",
         "firebasestorage",
         "firestore",
         "FSRS",
+        "Genin",
+        "Jonin",
+        "Mangekyo",
         "mindmap",
         "mindmaps",
+        "naruto",
+        "Rinnegan",
+        "Saiyan",
+        "sasuke",
+        "Sharingan",
         "spacedrecallapp",
         "tlmk"
     ],
