--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^11.11.1",
     "framer-motion": "^11.18.2",
