--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npx next dev",
-    "build": "node deploy.js",
+    "dev": "next dev",
+    "build": "next build",
     "build-original": "cross-env NEXT_SKIP_INITIAL_SETUP=1 NEXT_DISABLE_PRERENDER=1 npx next build",
     "build-vercel": "node setup-env.js && node vercel-build.js",
-    "start": "npx next start",
-    "lint": "npx next lint",
+    "start": "next start",
+    "lint": "next lint",
     "migrate-subjects": "ts-node -P src/scripts/tsconfig.json src/scripts/migrateSubjects.ts",
     "direct-deploy": "node direct-deploy.js",
     "deploy-with-env": "node deploy-with-env.js",
-    "clean-deploy": "node clean-deploy.js"
+    "clean-deploy": "node clean-deploy.js",
+    "sync-projects": "node -r dotenv/config src/scripts/syncProjects.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@next-auth/firebase-adapter": "^2.0.1",
+    "@notionhq/client": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.10",
@@ -24,12 +26,14 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.8",
+    "archiver": "^7.0.1",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,13 +41,15 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "firebase": "^11.6.0",
+    "firebase": "^11.7.3",
     "firebase-admin": "^11.11.1",
     "framer-motion": "^11.18.2",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "lucide-react": "^0.503.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.510.0",
     "next-auth": "^4.24.11",
+    "node-fetch": "^2.7.0",
     "openai": "^4.95.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -54,6 +60,7 @@
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
