--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "sync-projects": "node -r dotenv/config src/scripts/syncProjects.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.3",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-charts": "^8.3.1",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@notionhq/client": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.13",
@@ -33,6 +38,7 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@tanstack/react-table": "^8.21.3",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.8",
     "archiver": "^7.0.1",
@@ -54,6 +60,8 @@
     "node-fetch": "^2.7.0",
     "openai": "^4.95.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
