--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "geist": "^1.4.2"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.3",
