--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,32 @@
 {
     "cSpell.words": [
+        "AAMC",
+        "BBLS",
         "Chakra",
         "chartjs",
         "Chunin",
+        "CPBS",
         "firebaseapp",
         "firebasestorage",
         "firestore",
         "FSRS",
         "Genin",
         "Jonin",
+        "Jutsu",
+        "Kaplan",
         "Mangekyo",
+        "mcat",
         "mindmap",
         "mindmaps",
         "naruto",
+        "OCLS",
+        "PSBB",
         "Rinnegan",
         "Saiyan",
         "sasuke",
         "Sharingan",
         "spacedrecallapp",
+        "Spellbook",
         "tlmk"
     ],
     "search.useIgnoreFiles": false
