--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "build-original": "cross-env NEXT_SKIP_INITIAL_SETUP=1 NEXT_DISABLE_PRERENDER=1 npx next build",
     "build-vercel": "node setup-env.js && node vercel-build.js",
-    "build:dev": "vite build --mode development",
+    "build:dev": "cross-env NEXT_DISABLE_PRERENDER=1 NEXT_SKIP_INITIAL_SETUP=1 next build",
     "start": "next start",
     "lint": "next lint",
     "migrate-subjects": "ts-node -P src/scripts/tsconfig.json src/scripts/migrateSubjects.ts",
@@ -95,7 +95,6 @@
   },
   "resolutions": {
     "glob": "^10.3.10",
-    "inflight": "^2.0.0",
     "google-p12-pem": "^5.0.0",
     "node-domexception": "^2.0.0",
     "jose": "^5.2.2"
